# GVirtuS

./: CMakeLists.txt
cmake/: FindLog4Cplus.cmake
src/communicators/: AfUnixCommunicator.h  ShmCommunicator.h  TcpCommunicator.h  VMShmCommunicator.h  VMSocketCommunicator.h  VirtioCommunicator.h  ZmqCommunicator.h
src/util/: Communicator.cpp  Decoder.cpp  Decoder.h  gvirtus-type.h
